[improved] remove admin template offCanvasBar scrollbar, resolves #881 (thx to @MoeGakuen)

--- a/docs/examples/assets/css/admin.css
+++ b/docs/examples/assets/css/admin.css
@@ -230,6 +230,8 @@ ul {
     -webkit-transform: translate3d(0, 0, 0);
     -ms-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
+    overflow-y: visible;
+    min-height: 100%;
   }
   .admin-offcanvas-bar:after {
     content: none;
